<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

   <ImageView
       android:id="@+id/imageView2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:srcCompat="@drawable/image1" />

   <Button
       android:id="@+id/button16"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:backgroundTint="#FF9800"
       android:text="@string/button16"
       app:layout_constraintBaseline_toBaselineOf="@+id/button17"
       app:layout_constraintStart_toEndOf="@+id/button12" />

   <Button
       android:id="@+id/button10"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/button10"
       app:layout_constraintStart_toStartOf="@+id/button14"
       app:layout_constraintTop_toBottomOf="@+id/button15" />

   <Button
       android:id="@+id/button14"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/button14"
       app:layout_constraintStart_toStartOf="@+id/button17"
       app:layout_constraintTop_toBottomOf="@+id/button18" />

   <Button
       android:id="@+id/button1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/button1"
       app:layout_constraintBaseline_toBaselineOf="@+id/button2"
       app:layout_constraintStart_toEndOf="@+id/button4" />

   <Button
       android:id="@+id/button2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/button2"
       app:layout_constraintStart_toEndOf="@+id/button1"
       app:layout_constraintTop_toBottomOf="@+id/button7" />

   <Button
       android:id="@+id/button3"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:backgroundTint="#FFFF9800"
       android:text="@string/button3"
       app:layout_constraintBaseline_toBaselineOf="@+id/button2"
       app:layout_constraintStart_toStartOf="@+id/button7" />

   <Button
       android:id="@+id/button4"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/button4"
       app:layout_constraintBaseline_toBaselineOf="@+id/button5"
       app:layout_constraintStart_toStartOf="@+id/button8" />

   <Button
       android:id="@+id/button5"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/button5"
       app:layout_constraintStart_toEndOf="@+id/button8"
       app:layout_constraintTop_toBottomOf="@+id/button8" />

   <Button
       android:id="@+id/button6"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/button6"
       app:layout_constraintStart_toEndOf="@+id/button1"
       app:layout_constraintTop_toBottomOf="@+id/button11" />

   <Button
       android:id="@+id/button8"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/button8"
       app:layout_constraintBaseline_toBaselineOf="@+id/button9"
       app:layout_constraintStart_toStartOf="@+id/button12" />

   <Button
       android:id="@+id/button9"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/button9"
       app:layout_constraintStart_toEndOf="@+id/button12"
       app:layout_constraintTop_toBottomOf="@+id/button12" />

   <Button
       android:id="@+id/button13"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/button13"
       app:layout_constraintStart_toEndOf="@+id/button12"
       app:layout_constraintTop_toBottomOf="@+id/button17" />

   <Button
       android:id="@+id/button7"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:backgroundTint="#FFFF9800"
       android:text="@string/button7"
       app:layout_constraintBaseline_toBaselineOf="@+id/button6"
       app:layout_constraintStart_toStartOf="@+id/button11" />

   <Button
       android:id="@+id/button11"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:backgroundTint="#FFFF9800"
       android:text="@string/button11"
       app:layout_constraintBaseline_toBaselineOf="@+id/button10"
       app:layout_constraintStart_toStartOf="@+id/button15" />

   <Button
       android:id="@+id/button17"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginBottom="282dp"
       android:backgroundTint="#FFFF9800"
       android:text="@string/button17"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintStart_toEndOf="@+id/button16" />

   <Button
       android:id="@+id/button15"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:backgroundTint="#FFFF9800"
       android:text="@string/button15"
       app:layout_constraintBaseline_toBaselineOf="@+id/button14"
       app:layout_constraintStart_toStartOf="@+id/button18" />

   <Button
       android:id="@+id/button12"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="21dp"
       android:text="@string/button12"
       app:layout_constraintBaseline_toBaselineOf="@+id/button13"
       app:layout_constraintStart_toStartOf="parent" />

   <Button
       android:id="@+id/button18"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:backgroundTint="#FFFF9800"
       android:text="@string/button18"
       app:layout_constraintBaseline_toBaselineOf="@+id/button17"
       app:layout_constraintStart_toEndOf="@+id/button17" />

   <TextView
       android:id="@+id/textView2"
       android:layout_width="396dp"
       android:layout_height="53dp"
       android:layout_marginTop="370dp"
       android:textColor="#FFB81212"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.714"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>